--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='div1'>
 							<img class="img" src="images/1.png" align="left">
 							<div class="div2">
-							Research Intern, Microsoft Research, Redmond, WA
+							Research Intern, Microsoft Azure AI, Redmond, WA
 						<br>
 						<b>Project: VL Open-set Object Understanding</b>
 						<br>
