--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						<br>I am a final-year Ph.D. candidate at CSE department, State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						I am a final-year Ph.D. candidate at CSE department, State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a> from UB.
-						My previous research experience is object-centric video analysis including detection, segmentation, and tracking; object understanding in vision and language.
+						My previous research experience is object-centric video analysis including detection, segmentation, and tracking; object understanding with vision and language.
 
 					</ul>
 			</div>
@@ -124,13 +124,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="grid3" id="publication">
 			<div class="grid3-header">
-				<h3>Research</h3>
+				<h3>Publications</h3>
 			</div>
 			<div class="grid3-content">
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
-						<img class="paper-image" style="width: 100%" src="images/GRiT.png" >
+						<img class="paper-image" style="width: 100%" src="images/GRiT2.png" >
 					</div>
 					<div class='col-xs-9'>
 						<div class='paper-title'>GRiT: A Generative Region-to-text Transformer for Object Understanding</div>
