--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2212.00280.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
-							<a class="github-button" href="https://github.com/JialianW/GRiT" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/GRiT on GitHub">Star</a>
-						</div>
+							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=GRiT&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+							</div>
 					</div>
 				</div>
 
@@ -185,8 +185,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<!-- Place this tag where you want the button to render. -->
 							<!-- Place this tag where you want the button to render. -->
 							<!-- Place this tag where you want the button to render. -->
-							<a class="github-button" href="https://github.com/JialianW/TraDeS" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/TraDeS on GitHub">Star</a>
+<!--							<a class="github-button" href="https://github.com/JialianW/TraDeS" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/TraDeS on GitHub">Star</a>-->
 <!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
+							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=TraDeS&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 						</div>
 					</div>
 				</div>
@@ -203,7 +204,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9520281">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
 							<!-- Place this tag where you want the button to render. -->
-							<a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>
+<!--							<a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>-->
+							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=Forest_RCNN&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 						</div>
 					</div>
 				</div>
@@ -235,7 +237,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676v2.pdf">PDF</a>
 						<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
 						  <!-- Place this tag where you want the button to render. -->
-						  <a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>
+<!--						  <a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>-->
+						  <iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=Forest_RCNN&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 					  </div>
 					</div>
 				</div>
