--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2212.00280.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
 							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=GRiT&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
-							</div>
+						</div>
+						<div class='paper-description'>Our new work, GRiT, is a general and open-set object understanding framework that localizes objects and
+							can generate any style of free-form texts it was trained with to describe objects, e.g., class names, descriptive sentences (including object
+							attributes, actions, etc). GRiT can be applied in various region/object-level tasks, e.g., object detection, object captioning.</div>
 					</div>
 				</div>
 
