--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul class="graid3-ul" style="list-style-type:none">
 						I am a final-year Ph.D. candidate at CSE department, State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
-						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a> from UB.
+						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best Graduate Research Award</a> and
+						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best First Year Achiever Award</a> from CSE department of UB.
 						My previous research experience is object-centric video analysis including detection, segmentation, and tracking; object understanding with vision and language.
 
 					</ul>
@@ -444,7 +445,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<ul class="graid3-ul">
 					<li class="graid3-li">
-						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a>, State University of New York at Buffalo, 2020.
+						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">CSE Best Graduate Research Award</a>, State University of New York at Buffalo, 2022.
+					</li>
+				</ul>
+				<ul class="graid3-ul">
+					<li class="graid3-li">
+						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">CSE Best First Year Achiever Award</a>, State University of New York at Buffalo, 2020.
 					</li>
 				</ul>
 				<ul class="graid3-ul">
