--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best Graduate Research Award</a> and
 						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best First Year Achiever Award</a> from the CSE department of UB.
-						My previous research experience is object-centric video analysis including detection, segmentation, and tracking; object understanding with vision and language.
+						My previous research experience lies in object-centric video analysis including detection, segmentation, and tracking; object understanding with vision and language.
 
 					</ul>
 			</div>
