--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class='col-xs-9'>
 						<div class='paper-title'>ForestDet: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation</div>
 						<div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Qian Zhang, Ming Yang, and Junsong Yuan</div>
-						<div class='paper-venue'>IEEE Transactions on Multimedia (<b>TMM</b>), 2021. (Extension of the conference paper)</div>
+						<div class='paper-venue'>IEEE Transactions on Multimedia (<b>TMM</b>), 2021. (Extension of MM'20)</div>
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9520281">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
@@ -343,7 +343,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="div2">
 							Research Intern, Microsoft Azure AI, Redmond, WA
 						<br>
-						<b>Project: VL Open-set Object Understanding</b>
+						<b>Project: Open-set Object Understanding with Vision and Language</b>
 						<br>
 						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, <br> Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
 						</div>
