--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		  [<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]
 	  </p>
 	  <p style="color:red">
-		  I'm looking for full-time positions starting from Summer 2023.
+		  I'm looking for full-time industry positions starting from Summer 2023.
 	  </p>
   </div>
 </div>
