--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<br>
 							Research Intern, Beijing
 							<br>
-							<b>Project: Pedestrian Detection (MM'20)</b>
+							<b>Project: Pedestrian Detection (MM'20, CVPR'20)</b>
 							<br>
-							<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
+							<em>May 2018 - 2019.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 
 						</div>
 					</div>
