--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='div1'>
 							<img class="img" src="images/1.png" align="left">
 							<div class="div2">
-							Research Intern, Microsoft Azure AI, Redmond, WA
+							Research Intern, Microsoft, Redmond, WA
 						<br>
 						<b>Project: Open-set Object Understanding with Vision and Language</b>
 						<br>
