--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class='col-xs-9'>
 						<div class='paper-title'>GRiT: A Generative Region-to-text Transformer for Object Understanding</div>
 						<div class='paper-authors'><b>Jialian Wu</b>, Jianfeng Wang, Zhengyuan Yang, Zhe Gan, Zicheng Liu, Junsong Yuan, and Lijuan Wang</div>
-						<div class='paper-venue'>Technical report, 2022</div>
+						<div class='paper-venue'>ArXiv Preprint, 2022</div>
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2212.00280.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
