--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]-->
 		  [<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]
 	  </p>
-	  <p style="color:red">
-		  I'm looking for full-time industry positions starting from Summer 2023.
-	  </p>
+<!--	  <p style="color:red">-->
+<!--		  I'm looking for full-time industry positions starting from Summer 2023.-->
+<!--	  </p>-->
   </div>
 </div>
 
@@ -422,7 +422,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR 2020/2021/2022, ICCV 2021, ECCV 2022, AAAI 2021/2022/2023, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
+						CVPR 2020/2021/2022, ICCV 2021/2023, NeurIPS 2023, ECCV 2022, AAAI 2021/2022/2023, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
