--- a/index.html
+++ b/index.html
@@ -72,11 +72,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     			<h3>Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</h3>
 			<br>
 			<p>
-				Ph.D. Candidate
+				Machine Learning Researcher
 				<br>
-				State University of New York at Buffalo
-				<br>
-				Email: jialianw at buffalo dot edu
+				Qualcomm AI Research, San Diego, CA
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
@@ -110,8 +108,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						I am a final-year Ph.D. candidate at the CSE department, State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
-						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
+						I am a Machine Learning Researcher at Qualcomm AI Research. I received my Ph.D. degree in Computer Science and Engineering from State University of New York at Buffalo (UB) in 2023, advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						Before that, I got B.Eng. from Tianjin University in 2018.
+<!--						, where I continued one-year M.Eng. study and left for UB before finishing the degree.-->
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best Graduate Research Award</a> and
 						<a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best First Year Achiever Award</a> from the CSE department of UB.
 						My previous research experience lies in object understanding in videos and images including detection, segmentation, and tracking; open-set object understanding with vision and language.
@@ -142,9 +141,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
 							<iframe src="https://ghbtns.com/github-btn.html?user=JialianW&repo=GRiT&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 						</div>
-						<div class='paper-description'>Our new work, GRiT, is a general and open-set object understanding framework that localizes objects and
-							can generate any style of free-form texts it was trained with to describe objects, e.g., class names, descriptive sentences (including object
-							attributes, actions, etc). GRiT can be applied in various region/object-level tasks, e.g., object detection, object captioning.</div>
+<!--						<div class='paper-description'>Our new work, GRiT, is a general and open-set object understanding framework that localizes objects and-->
+<!--							can generate any style of free-form texts it was trained with to describe objects, e.g., class names, descriptive sentences (including object-->
+<!--							attributes, actions, etc). GRiT can be applied in various region/object-level tasks, e.g., object detection, object captioning.</div>-->
 					</div>
 				</div>
 
