--- a/index.html
+++ b/index.html
@@ -465,9 +465,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		</div>
 
+
 		<center>
 		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?&w=150&t=n&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU"></script>
 		</center>
+						<img class="custom1" src="./images/image5crop.png">
 
 		<div class="footer" style="color:white;">
 <!--			The only way to live is by accepting each minute as an unrepeatable miracle-->
