--- a/projects/music.html
+++ b/projects/music.html
@@ -18,66 +18,46 @@
 <div id="main">
 
     <div class="content"><br>
-        <br>
-        <div class="abstract_sec">
-            <h2> I created this page for sharing my favorite musics. Hope you will enjoy!</h2>
-<!--            <A> I start this page for sharing my favorite musics. Hope you can enjoy them!</A>-->
-        </div>
 
         <br>
         <div class="name">
-            <h2> Kotaro Oshio</h2>
+            <h2>Jakob Dylan</h2>
         </div>
         <div class="intro">
-            <A> Kotaro is my favorite fingerstyle guitar player. His covered songs are mostly very emotional.
-                I used to practice his songs in high school but was only able to perform two easiest songs of his as playing
-                fingerstyle guitar is not an easy thing. The second video below (covered by Sungha Jung) is the song 'Fight'
-                which is the well-known hardest song in fingerstyle guitar. But that's pretty cool, isn't it?
+            <A> During my high school years, I happened to come across Jakob Dylan's songs, and ever since then, I've revisited his music from time to time.
+                His captivating voice and the western musical style have consistently enthralled me, always bringing me to the imagery of sunny days, azure skies,
+                golden leaves, and the slight chill of autumn. Perhaps it's because my first encounter with his songs took place during the autumn.
 
             </A>
         </div>
         <br>
         <div style="width:1200px;">
-            <div style="position:relative; left:-200px; float: left">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/w87dLLp0egE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+            <div style="position:relative; left:-200px; float: left">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kxi_c4qAsPw?si=ybW1T_PmVUfZfYJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
+
             <div style="position:relative; right:260px;float: right">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/qggDgFNhwy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ymURnUsHiCA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+
+            <div style="position:relative; left:-200px; float: left">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/m1yl4toiWbE?si=4GUbfQX2tsvV7hQd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+
+            <div style="position:relative; right:260px;float: right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IuM4s33JyzI?si=QJ8QqVrVHumncUw-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+
             <div style="clear:both;"></div>
         </div>
-
-        <div class="name">
-            <h2> Tommy Emmanuel</h2>
-            <!--            <A> I start this page for sharing my favorite musics. Hope you can enjoy them!</A>-->
-        </div>
-
-        <div class="intro">
-            <A>Tommy is an Australian fingerstyle guitar player. His covered songs are mostly upbeat, while
-            below there are two gentle ones that I like most.
-<!--                Fun to know he wrote a song called "The Finger Lakes",-->
-<!--                while the finger lakes located in rural area NY is one of my favorite places to travel:)-->
-            </A>
-        </div>
         <br>
-
-        		<div style="width:1200px;">
-        			<div style="position:relative; left:-200px; float: left">
-        				<iframe width="560" height="315" src="https://www.youtube.com/embed/K0QNj2ekusg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        			</div>
-        			<div style="position:relative; right:260px;float: right">
-        				<iframe width="560" height="315" src="https://www.youtube.com/embed/MHeHypLZm_c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        			</div>
-        			<div style="clear:both;"></div>
-        		</div>
 
         <div class="name">
             <h2>The Beatles</h2>
         </div>
         <div class="intro">
-            <A> I love every song of The Beatles!! The Beatles were an English rock band formed in Liverpool in 1960.
+            <A> I literally love every song of The Beatles!! The Beatles were an English rock band formed in Liverpool in 1960.
                 They are regarded as <a href="https://en.wikipedia.org/wiki/Cultural_impact_of_the_Beatles">the most influential band of all time. </a>
 
             </A>
@@ -86,37 +66,61 @@
         <div style="width:1200px;">
             <div style="position:relative; left:-200px; float: left">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/KQetemT1sWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/wXTJBr9tt8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-
             </div>
             <div style="position:relative; right:260px;float: right">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1LMSOfs10mA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/v7wErmth4k4?si=bfSEdG5jtAdhpSRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div style="clear:both;"></div>
         </div>
 
+<!--        <div class="name">-->
+<!--            <h2> Kotaro Oshio</h2>-->
+<!--        </div>-->
+<!--        <div class="intro">-->
+<!--            <A> Kotaro is my favorite fingerstyle guitar player. His covered songs are mostly very emotional.-->
+<!--                I used to practice his songs in high school but was only able to perform two easiest songs of his as playing-->
+<!--                fingerstyle guitar is not an easy thing. The second video below (covered by Sungha Jung) is the song 'Fight'-->
+<!--                which is the well-known hardest song in fingerstyle guitar. But that's pretty cool, isn't it?-->
 
-        <div class="name">
-            <h2>Jakob Dylan</h2>
-        </div>
-        <div class="intro">
-            <A> Jakob is an American country-style songwriter who seems to be rarely known by people, but you must know his
-                father, Bob Dylan. I started listening to the "Seeing Things" album since high school and still listen it today. This talented man wrote
-                so many touching songs that definitely deserve much more credits.
+<!--            </A>-->
+<!--        </div>-->
+<!--        <br>-->
+<!--        <div style="width:1200px;">-->
+<!--            <div style="position:relative; left:-200px; float: left">-->
+<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/w87dLLp0egE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
-            </A>
-        </div>
-        <br>
-        <div style="width:1200px;">
-            <div style="position:relative; left:-200px; float: left">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ymURnUsHiCA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--            </div>-->
+<!--            <div style="position:relative; right:260px;float: right">-->
+<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/qggDgFNhwy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<!--            </div>-->
+<!--            <div style="clear:both;"></div>-->
+<!--        </div>-->
 
-            </div>
-            <div style="position:relative; right:260px;float: right">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZgjradAgY-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div style="clear:both;"></div>
-        </div>
+<!--        <div class="name">-->
+<!--            <h2> Tommy Emmanuel</h2>-->
+<!--            &lt;!&ndash;            <A> I start this page for sharing my favorite musics. Hope you can enjoy them!</A>&ndash;&gt;-->
+<!--        </div>-->
+
+<!--        <div class="intro">-->
+<!--            <A>Tommy is an Australian fingerstyle guitar player. His covered songs are mostly upbeat, while-->
+<!--            below there are two gentle ones that I like most.-->
+<!--&lt;!&ndash;                Fun to know he wrote a song called "The Finger Lakes",&ndash;&gt;-->
+<!--&lt;!&ndash;                while the finger lakes located in rural area NY is one of my favorite places to travel:)&ndash;&gt;-->
+<!--            </A>-->
+<!--        </div>-->
+<!--        <br>-->
+
+<!--        		<div style="width:1200px;">-->
+<!--        			<div style="position:relative; left:-200px; float: left">-->
+<!--        				<iframe width="560" height="315" src="https://www.youtube.com/embed/K0QNj2ekusg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+
+<!--        			</div>-->
+<!--        			<div style="position:relative; right:260px;float: right">-->
+<!--        				<iframe width="560" height="315" src="https://www.youtube.com/embed/MHeHypLZm_c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<!--        			</div>-->
+<!--        			<div style="clear:both;"></div>-->
+<!--        		</div>-->
+
 
 <!--        <div class="name">-->
 <!--            <h2>Ed Sheeran</h2>-->
