--- a/projects/music.html
+++ b/projects/music.html
@@ -26,7 +26,7 @@
         <div class="intro">
             <A> During my high school years, I happened to come across Jakob Dylan's songs, and ever since then, I've revisited his music from time to time.
                 His captivating voice and the western musical style have consistently enthralled me, always bringing me to the imagery of sunny days, azure skies,
-                golden leaves, and the slight chill of autumn. Perhaps it's because my first encounter with his songs took place during the autumn.
+                golden leaves, and the slight chill of autumn. Perhaps it's because my first encounter with his songs took place during that autumn.
 
             </A>
         </div>
@@ -73,6 +73,54 @@
             <div style="clear:both;"></div>
         </div>
 
+        <div class="name">
+            <h2>Coldplay</h2>
+        </div>
+        <br>
+        <div style="width:1200px;">
+            <div style="position:relative; left:-200px; float: left">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kDPikoBN-lA?si=gFqBvjIgXclqOik4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="position:relative; right:260px;float: right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z8TR0NzOFT0?si=HFCut960bdN1UF5t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="clear:both;"></div>
+        </div>
+
+        <div class="name">
+            <h2>John Mayer</h2>
+        </div>
+        <br>
+        <div style="width:1200px;">
+            <div style="position:relative; left:-200px; float: left">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IfFi4Q7ueA8?si=L4kLbRd8GqEZN1v2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="position:relative; right:260px;float: right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wwTK3vmNMos?si=nUJQSnPSzpSJ8q91" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="clear:both;"></div>
+        </div>
+
+        <div class="name">
+            <h2>Kotaro Oshio</h2>
+        </div>
+        <div class="intro">
+            <A>
+                Kotaro Oshio my favorite acoustic guitarist (fingerstyle guitar player). I used to practice his songs but some are too hard:)
+            </A>
+        </div>
+        <br>
+        <div style="width:1200px;">
+            <div style="position:relative; left:-200px; float: left">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/w87dLLp0egE?si=pGgeAvdcPnNDhFFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="position:relative; right:260px;float: right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/18NYb-zNDW8?si=1lPLn7sLg1wrUP9H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="clear:both;"></div>
+        </div>
+        <br>
+        I hope you can enjoy the songs as well.
 <!--        <div class="name">-->
 <!--            <h2> Kotaro Oshio</h2>-->
 <!--        </div>-->
@@ -121,21 +169,6 @@
 <!--        			<div style="clear:both;"></div>-->
 <!--        		</div>-->
 
-
-<!--        <div class="name">-->
-<!--            <h2>Ed Sheeran</h2>-->
-<!--        </div>-->
-<!--        <div class="intro">-->
-<!--        <br>-->
-<!--        <div style="width:1200px;">-->
-<!--            <div style="position:relative; left:-200px; float: left">-->
-<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/6B9J3lEyffA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-<!--            </div>-->
-<!--            <div style="position:relative; right:260px;float: right">-->
-<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZgjradAgY-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-<!--            </div>-->
-<!--            <div style="clear:both;"></div>-->
-<!--        </div>-->
 
 <!--        <div class="name">-->
 <!--            <h2>AC/DC</h2>-->
