--- a/projects/music.html
+++ b/projects/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="language" content="english">
-    <title>Efficient Video Instance Segmentation via Tracklet Query and Proposal</title>
+    <title>Music</title>
     <meta name="description" content="Deep Plastic Surgery">
     <meta name="author" content="Jialian Wu">
     <link rel="shortcut icon" href="../images/ub.ico" type="image/x-icon" />
