--- a/index.html
+++ b/index.html
@@ -419,14 +419,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<ul class="graid3-ul">
 					<li class="graid3-li">
-						Conference Reviewer
+						Conference Reviewer:
 						<br>
 						CVPR 2020/2021/2022, NeurIPS 2023, ICLR 2024, ICCV 2021/2023, ECCV 2022, AAAI 2021/2022/2023, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
 					</li>
 					<li class="graid3-li">
-						Journal Reviewer
+						Journal Reviewer:
 						<br>
-						IEEE Transactions on Image Processing, IEEE Transactions on Multimedia, IEEE Transactions on Circuits and Systems for
+						IEEE Transactions on Pattern Analysis and Machine Intelligence,
+						IEEE Transactions on Image Processing, <br>
+						IEEE Transactions on Multimedia, IEEE Transactions on Circuits and Systems for
 						Video Technology, etc
 
 					</li>
