--- a/index.html
+++ b/index.html
@@ -421,15 +421,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer:
 						<br>
-						CVPR 2020/2021/2022, NeurIPS 2023, ICLR 2024, ICCV 2021/2023, ECCV 2022, AAAI 2021/2022/2023, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
+						CVPR 2020/2021/2022/2024, ICLR 2024, NeurIPS 2023, ICCV 2021/2023, ECCV 2022, AAAI 2021/2022/2023, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer:
 						<br>
-						IEEE Transactions on Pattern Analysis and Machine Intelligence,
-						IEEE Transactions on Image Processing, <br>
-						IEEE Transactions on Multimedia, IEEE Transactions on Circuits and Systems for
-						Video Technology, etc
+						IEEE Transactions on Pattern Analysis and Machine Intelligence <br>
+						IEEE Transactions on Image Processing <br>
+						IEEE Transactions on Circuits and Systems for
+						Video Technology <br>IEEE Transactions on Multimedia, etc
 
 					</li>
 				</ul>
@@ -471,7 +471,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<center>
 		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?&w=150&t=n&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU"></script>
 		</center>
-						<img class="custom1" src="./images/image5crop.png">
+<!--						<img class="custom1" src="./images/image5crop.png">-->
 
 		<div class="footer" style="color:white;">
 <!--			The only way to live is by accepting each minute as an unrepeatable miracle-->
